test/files/errors/wrongStructDeclaration.jg
test struct {
    x int;
}

_main int () 
{
    uuuu test;
    uuuu->x = 10;
    0 return;
}